frontend/tests/cases/negative/interfaces/bindings/recursiveInterfaceConstraint.gr
-- recursive interface constraint
-- won't even check recursive constraint as
-- a scope error will be raised first
interface {Simple1 a} => Simple2 a

interface {Simple2 a} => Simple1 a
